contact section emailJS apply

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- EmailJS Code -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("GVC4lZO9Db_aCA5BK");
+      })();
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
